--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <link href="edge.css" rel="stylesheet">
     </head>
     <body id="root"></body>
+    <script type="application/javascript" src="data/jared.js"></script>
     <script type="application/javascript" src="edge.js"></script>
 </html>
