--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body id="root"></body>
     <script type="application/javascript" src="data/casey.js"></script>
+    <script type="application/javascript" src="wagerTable.js"></script>
     <script type="application/javascript" src="edge.js"></script>
 </html>
