add filter and updateTotals

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body id="root"></body>
     <script type="application/javascript" src="data/casey.js"></script>
     <script type="application/javascript" src="wagerTable.js"></script>
+    <script type="application/javascript" src="totalsList.js"></script>
+    <script type="application/javascript" src="fetchBets.js"></script>
     <script type="application/javascript" src="edge.js"></script>
 </html>
