--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="edge.css" rel="stylesheet">
     </head>
     <body id="root"></body>
-    <script type="application/javascript" src="data/casey.js"></script>
+    <script type="application/javascript" src="data/delaney.js"></script>
     <script type="application/javascript" src="wagerTable.js"></script>
     <script type="application/javascript" src="totalsList.js"></script>
     <script type="application/javascript" src="fetchBets.js"></script>
