update file structure

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     	<title>This Is The Edge</title>
-        <link href="edge.css" rel="stylesheet">
+        <link href="css/edge.css" rel="stylesheet">
     </head>
     <body id="root"></body>
     <script type="application/javascript" src="data/player.js"></script>
-    <script type="application/javascript" src="wagerTable.js"></script>
-    <script type="application/javascript" src="totalsList.js"></script>
-    <script type="application/javascript" src="fetchBets.js"></script>
-    <script type="application/javascript" src="edge.js"></script>
+    <script type="application/javascript" src="js/wagerTable.js"></script>
+    <script type="application/javascript" src="js/totalsList.js"></script>
+    <script type="application/javascript" src="js/fetchBets.js"></script>
+    <script type="application/javascript" src="js/edge.js"></script>
 </html>
