add some file upload logic

--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     	<title>This Is The Edge</title>
         <link href="css/edge.css" rel="stylesheet">
     </head>
-    <body id="root"></body>
     <script type="application/javascript" src="data/player.js"></script>
+    <script>
+    var openFile = function(event) {
+      var input = event.target;
+
+      var reader = new FileReader();
+      reader.onload = function(){
+        var text = reader.result;
+        console.log(reader.result.substring(0, 200));
+        var par = document.getElementById('html-text');
+        // par.innerHTML = text;
+        render(text);
+      };
+      reader.readAsText(input.files[0]);
+    };
+    </script>
+    <body id="root">
+      <input type='file' accept='text/plain' onchange='openFile(event)'><br>
+      <img id='output'>
+
+      <div id='html-text'></div>
+    </body>
     <script type="application/javascript" src="js/wagerTable.js"></script>
     <script type="application/javascript" src="js/totalsList.js"></script>
     <script type="application/javascript" src="js/fetchBets.js"></script>
