--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link href="css/edge.css" rel="stylesheet">
     </head>
     <body id="root">
-      <iframe src="//realtimebitcoin.info?theme=chaplin&currency=usd" width="600" height="120"frameborder="none"></iframe>
       <input type='file' accept='text/plain' onchange='openFile(event)'><br>
+      <iframe src="//realtimebitcoin.info?theme=chaplin&currency=usd" width="100%" frameborder="none"></iframe>
       <img id='output'>
 
       <div id='html-text'></div>
