activate btc iframe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body id="root">
       <input type='file' accept='text/plain' onchange='openFile(event)'><br>
-      <!-- <iframe src="//realtimebitcoin.info?theme=chaplin&currency=usd" width="100%" frameborder="none"></iframe> -->
+      <iframe src="//realtimebitcoin.info?theme=chaplin&currency=usd" width="100%" frameborder="none"></iframe>
       <img id='output'>
 
       <div id='html-text'></div>
