--- a/index.html
+++ b/index.html
@@ -19,4 +19,5 @@
     <script type="application/javascript" src="js/totalsList.js"></script>
     <script type="application/javascript" src="js/fetchBets.js"></script>
     <script type="application/javascript" src="js/edge.js"></script>
+    <script src="https://smtpjs.com/smtp.js"></script>
 </html>
